<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:gravity="center"
   android:background="@drawable/appp_1"
    tools:context=".LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"

        android:fontFamily="cursive"
        android:text="@string/Email"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/please_enter_your_email"
        android:minHeight="48dp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:text="@string/Password"
        android:textColor="#E8FFFFFF"
        android:textSize="24sp"
         />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/please_enter_your_password"
        android:minHeight="48dp"
        android:textSize="14sp" />


    <Button
        android:id="@+id/etButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/login" />

</LinearLayout>
