<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <Button
        android:id="@+id/etBackbutton2"
        android:layout_width="65dp"
        android:layout_height="49dp"
        android:layout_gravity="left"
        android:padding="07dp"
        android:text="@string/back"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="-14dp" />


    <TextView
        android:id="@+id/etRegregister"
        android:layout_width="252dp"
        android:layout_height="93dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/Register"
        android:textColor="#00D193"
        android:textSize="65dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/etRegCreatenewaccount"
        android:layout_width="284dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/Create_your_new_account"
        android:textColor="#FF000000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/etRegreUsername"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:layout_margin="01dp"

        android:fontFamily="@font/roboto"
        android:padding="09dp"
        android:text="@string/Username"
        android:textColor="#FF000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <EditText
        android:id="@+id/etFullname"
        android:layout_width="394dp"
        android:layout_height="46dp"
        android:layout_margin="01dp"
        android:hint="Enter your name"
        android:padding="12dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <TextView
        android:id="@+id/etRegreEmail"
        android:layout_width="118dp"
        android:layout_height="43dp"
        android:layout_margin="01dp"

        android:fontFamily="@font/roboto"
        android:padding="09dp"
        android:text="@string/Email"
        android:textColor="#FF000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />

    <EditText
        android:id="@+id/etRegEmail"
        android:layout_width="393dp"
        android:layout_height="48dp"
        android:layout_margin="01dp"
        android:hint="Write your email"
        android:padding="12dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="01dp"
        android:fontFamily="@font/roboto"
        android:padding="12dp"
        android:text="@string/Password"
        android:textColor="#FF000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <EditText
        android:id="@+id/etpw1"
        android:layout_width="433dp"
        android:layout_height="50dp"
        android:layout_margin="01dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <EditText
        android:id="@+id/etpw2"
        android:layout_width="447dp"
        android:layout_height="53dp"
        android:layout_margin="01dp"
        android:hint="Re-enter Password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="155dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"

        android:padding="12dp"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/al_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="12dp"
        android:text="Have an Account?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />

    <TextView
        android:id="@+id/Lo_up"
        android:layout_width="111dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="12dp"
        android:rotationX="-2"
        android:text="Login Here!"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />

    <ProgressBar
        android:id="@+id/pBar"
        android:layout_width="44dp"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:padding="7dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <ImageView
        android:id="@+id/applogowhite"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/applogowhite" />

</androidx.constraintlayout.widget.ConstraintLayout>

